--- a/margin-and-padding/01-margin-and-padding-1/my_solution/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/my_solution/style.css
@@ -6,23 +6,24 @@ body {
 .one {
   background: pink;
   border: 3px solid blue;
-  /* CHANGE ME */
+  margin: 12px;
   padding: 0px;
-  margin: 0px;
 }
 
 .two {
   background: lightblue;
   border: 3px solid purple;
-  /* CHANGE ME */
-  margin-bottom: 0px;
+  margin-bottom: 48px;
 }
 
 .three {
   background: peachpuff;
   border: 3px solid brown;
   width: 200px;
-  /* CHANGE ME */
   padding: 0px;
-  margin-left: 0px;
+  margin-left: auto;
+}
+
+.one, .three {
+  padding: 32px;
 }
