--- a/margin-and-padding/02-margin-and-padding-2/my_solution/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/my_solution/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 .card {
+  padding: 8px;
   width: 400px;
   background: #fff;
   margin: 16px auto;
@@ -11,17 +12,25 @@ body {
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
 }
 
 .content {
+  padding: 16px 8px;
+  margin-top: 8px;
   background: #e3f4ff;
 }
 
 .button-container {
+  padding: 8px;
+  text-align: center;
   background: #e3f4ff;
+  margin-top: 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 8px 24px;
 }
